# connman_native_comms

./: .clang-format  .clang-tidy  LICENSE  README.md  analysis_options.yaml  pubspec.yaml  test_connect.dart
.github/workflows/: ci.yml
example/: connect_service.dart  example_utils.dart  monitor_service.dart  read_service.dart  scan_services.dart
example/flutter_network_manager/: .metadata  NATIVE_SETUP.md  QUICKSTART.md  README.md  build_and_sync_native.sh  pubspec.yaml
example/flutter_network_manager/android/app/: build.gradle.kts
example/flutter_network_manager/android/app/src/main/: AndroidManifest.xml
example/flutter_network_manager/android/app/src/main/kotlin/com/example/flutter_network_manager/: MainActivity.kt
example/flutter_network_manager/ios/Runner/: Info.plist
example/flutter_network_manager/ios/Runner.xcodeproj/: project.pbxproj
example/flutter_network_manager/lib/: main.dart  scanner_screen.dart  service_screen.dart  technology_screen.dart
example/flutter_network_manager/linux/: CMakeLists.txt
example/flutter_network_manager/linux/runner/: my_application.cc
example/flutter_network_manager/macos/Runner.xcodeproj/: project.pbxproj
example/flutter_network_manager/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/flutter_network_manager/macos/Runner/Configs/: AppInfo.xcconfig
example/flutter_network_manager/test/: widget_test.dart
example/flutter_network_manager/web/: index.html  manifest.json
example/flutter_network_manager/windows/: CMakeLists.txt
example/flutter_network_manager/windows/runner/: Runner.rc  main.cpp
interfaces/: Manager.xml  Service.xml  Technology.xml
lib/: connman_native_comms.dart
lib/src/: client.dart  exceptions.dart  service.dart  technology.dart
lib/src/ffi/: bindings.dart  codec.dart  library_loader.dart  types.dart
lib/src/internal/: library_loader.dart
native/: CMakeLists.txt
native/include/: connman_agent.h  connman_bridge.h  connman_manager.h  connman_types.h  dart_api.h  dart_api_dl.h  dart_native_api.h  dart_version.h  glaze_meta.h  service_bridge.h  technology_bridge.h  work_queue.h
native/include/internal/: dart_api_dl_impl.h
native/src/: connman_agent.cpp  connman_bridge.cpp  connman_manager.cpp  dart_api_dl.c  service_bridge.cpp  technology_bridge.cpp
native/test/: CMakeLists.txt  test_connman_manager.cpp  test_types.cpp
scripts/: asan.sh  clang_tidy.sh  generate_proxies.sh
test/: connman_test.dart
